@@ -4,12 +4,14 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import market.demo.domain.etc.Delivery;
 import market.demo.domain.item.Item;
 import market.demo.domain.member.Address;
 import market.demo.domain.member.Member;
 import market.demo.domain.status.DeliveryStatus;
 import market.demo.domain.status.OrderStatus;
+import market.demo.service.CartService;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -25,13 +27,17 @@ public class OrderTestDataCreator {
     private final InitService initService;
 
     public void init() {
-        initService.createTestData(100);
+        initService.createTestData(200);
     }
 
     @Component
+    @RequiredArgsConstructor
+    @Slf4j
     static class InitService {
         @PersistenceContext
         private EntityManager em;
+
+        private final CartService cartService;
 
         @Transactional
         public void createTestData(int numberOfOrders) {
@@ -40,7 +46,7 @@ public class OrderTestDataCreator {
                 OrderStatus randomOrderStatus = orderStatusValues[ThreadLocalRandom.current().nextInt(orderStatusValues.length)];
 
                 // 임의의 멤버 조회
-                long memberId = ThreadLocalRandom.current().nextLong(1, 51);
+                long memberId = i + 1;
                 Member member = em.find(Member.class, memberId);
 
                 // 주문 생성
@@ -55,9 +61,20 @@ public class OrderTestDataCreator {
                     int orderCount = ThreadLocalRandom.current().nextInt(1, 5);
                     int orderPrice = item.getItemPrice() * orderCount;
                     return new OrderItem(item, orderCount, orderPrice);
-                }).collect(Collectors.toList());
+                }).toList();
 
-                orderItems.forEach(order::addOrderItem); // 주문 항목을 주문에 추가
+                orderItems.forEach(orderItem -> {
+                    order.addOrderItem(orderItem);
+
+                    if (!isItemInCart(member.getCart(), orderItem.getItem())) {
+                        try {
+                            cartService.insertCart(member.getLoginId(), orderItem.getItem().getId());
+                        } catch (IllegalArgumentException e) {
+                            log.info("이미 장바구니에 있는 아이템: " + e.getMessage());
+                        }
+                    }
+                });
+
                 order.calculateTotalAmount(); // 총 금액 계산
                 em.persist(order);
 
@@ -67,6 +84,10 @@ public class OrderTestDataCreator {
                 order.setDelivery(delivery);
                 em.persist(delivery);
             }
+        }
+
+        private boolean isItemInCart(Cart cart, Item item) {
+            return cart.getCartItems().stream().anyMatch(cartItem -> cartItem.getItem().equals(item));
         }
     }
 }
